# auto-research

./: .gitignore  LICENSE  README.md  agents.md  pyproject.toml
docs/: README.md
examples/: README.md
scripts/: evaluate_prediction_tools.py  example_command_provider.py  monitor_autoresearch_run.py  sidecar_autoresearch_run.py
src/llm_autoresearch/: __init__.py  cli.py  evaluator.py  feedback.py  git.py  judge.py  loop.py  models.py  providers.py  run_files.py  status.py  supervisor.py  templates.py
tests/: test_cli.py  test_feedback.py  test_git.py  test_judge.py  test_loop.py  test_models.py  test_providers.py  test_status.py  test_supervisor.py  test_topic_model.py
