[project]
name = "llm-autoresearch"
version = "0.1.0"
description = "Provider-agnostic LLM Auto Research skeleton"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
autoresearch = "llm_autoresearch.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_autoresearch"]
